seminar 4(class): исключения (чтение, запись файла, проверка данных-собственные исключения)

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 **/src/test/**/target/
 *.xml
 .gitignore
-_МАТЕРИАЛЫ документы/*
+/_МАТЕРИАЛЫ документы/*
 
 ### IntelliJ IDEA ###
 .idea/*
